Finished books CRUD
